# hw_2

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
include/: ip_address.h  ip_parser.h  ip_printer.h
src/: ip_address.cpp  ip_parser.cpp  ip_printer.cpp  main.cpp
tests/: tests.cpp
